kubernetes/doc-home-cluster/apps/home-automation/zigbee2mqtt/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zigbee2mqtt
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
  egress:
    # mosquitto
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP

    # SLZB-06M
    - toFQDNs:
        - matchName: zb_co.piscio.net
      toPorts:
        - ports:
            - port: "6638"
              protocol: TCP
